# plato-agent

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  desktop-linux-release.yml  desktop.yml  site.yml  windows.yml
.plandoc/designs/: desktop-shell.md  gateway-presentation.md  gateway-readiness.md  hermes-light-product-spine.md  mvp-decisions.md  platonic-runtime-compatibility.md  shell-exec-safety.md
desktop/: package-lock.json  package.json  vite.config.ts
desktop/scripts/: stage-linux-sidecar.mjs  stage-windows-sidecar.mjs
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux-package.conf.json  tauri.windows-package.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: lib.rs  lifecycle.rs  main.rs  unix_lifecycle.rs  unix_proof.rs  windows_installer_proof.rs  windows_proof.rs
desktop/src-tauri/windows/: installer-hooks.nsh
desktop/src/lib/: bridge.ts  desktop.ts  run-state.spec.ts  run-state.ts
desktop/src/lib/components/: ApprovalModal.svelte  Composer.svelte  SessionList.svelte  Transcript.svelte
desktop/src/routes/: +layout.svelte  +page.svelte  layout.css  page.svelte.spec.ts
docs/: ARCHITECTURE.md  QUICKSTART.md
site/: .htmlvalidate.json  Dockerfile  feed.xml  index.html  nginx.conf  package-lock.json  package.json  robots.txt  sitemap.xml
site/assets/: site.css
site/blog/: index.html
site/blog/introducing-platonic/: index.html
site/scripts/: browser-proof.mjs  check-site.mjs
spikes/windows-pipe/: Cargo.toml
spikes/windows-pipe/src/: main.rs
src/: anthropic.rs  app.rs  config.rs  discord_gateway.rs  error.rs  ledger.rs  lib.rs  model.rs  paths.rs  replay.rs  telegram_gateway.rs  tool_catalog.rs  tools.rs  tui.rs  windows_security.rs
src/daemon/: client.rs  control.rs  handlers.rs  installer_gate.rs  lock.rs  mod.rs  protocol.rs  runtime.rs  server.rs  transport.rs
src/provider/: openai_compat.rs
src/tui/: app.rs  commands.rs  mod.rs  modal.rs  render.rs  state.rs
tests/: unix_runtime_fallback.rs  windows_daemon.rs
