[package]
name = "plato-agent"
version = "0.1.0"
edition = "2024"
publish = ["crates-io"]
description = "Platonic runtime and CLI built on platonic-core."
license = "MIT OR Apache-2.0"
repository = "https://github.com/referential-ai/plato-agent"
documentation = "https://docs.rs/plato-agent"
readme = "README.md"

[[bin]]
name = "plato"
path = "src/bin/plato.rs"

[[bin]]
name = "plato-agentd"
path = "src/bin/plato-agentd.rs"

[[bin]]
name = "plato-tui"
path = "src/bin/plato-tui.rs"

[[bin]]
name = "plato-gateway-discord"
path = "src/bin/plato-gateway-discord.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28.1"
platonic-core = "0.1.0"
ratatui = "0.29.0"
rusqlite = { version = "0.39", features = ["bundled"] }
rustix = { version = "1", features = ["event", "fs", "net", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
sha2 = "0.10"
thiserror = "2"
toml = "0.9"
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
ureq = { version = "2", features = ["json"] }
url = "2"

[target.'cfg(windows)'.dependencies]
ctrlc = "=3.5.2"
interprocess = "=2.4.2"
widestring = "1"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_Pipes",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
