[package]
name = "plato-desktop"
version = "0.1.0"
description = "Plato desktop shell"
license = "UNLICENSED"
edition = "2024"
rust-version = "1.85"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plato_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
plato-agent = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3"
