[package]
name = "plato-desktop"
version = "0.1.0"
description = "Platonic desktop shell"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plato_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
plato-agent = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"

[target.'cfg(windows)'.dependencies]
interprocess = "=2.4.2"
widestring = "1"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Registry",
  "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3"
