[package]
name = "windows-pipe-spike"
version = "0.0.0"
edition = "2024"
publish = false

[target.'cfg(windows)'.dependencies]
interprocess = "=2.4.2"
widestring = "1"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
